Finish introduce.md.

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 <p>作为一名大三学生，我斗胆写下这些文档，一方面是给自己最近的游戏引擎学习经历画上一个句号，这也将成为我毕设的一部分；另一方面也想给后人指一指方向（抛砖引玉）。</p>
 <p>希望能有越来越多人热爱游戏引擎，了解它然后优化它，争取早日与《黑客帝国》接轨。</p>
 <p>写完中文文档后，我将会慢慢翻译成英文。</p>
-<p>如果你阅读期间有任何问题，可以在该项目的 <a href="https://github.com/LearnGameEngine/LearnGameEngine.github.io"><strong>Github</strong></a> 地址提交 <strong>issue</strong> 或者向 <strong>2481814748@qq.com</strong> 发送邮件，我将会非常感谢您提供的宝贵意见。</p>
+<p>如果你阅读期间有任何问题，可以在该项目的 <a href="https://github.com/LearnGameEngine/LearnGameEngine.github.io"><strong>Github</strong> 地址</a> 提交 <strong>issue</strong> 或者向 <strong>2481814748@qq.com</strong> 发送邮件，我将会非常感谢您提供的宝贵意见。</p>
 <h1 id="_2">欢迎来到游戏引擎的世界</h1>
 <h2 id="_3">为什么要学习</h2>
 <blockquote>
